--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -1,11 +1,14 @@
 project(PackageTest CXX)
 cmake_minimum_required(VERSION 2.8.12)
+set(CMAKE_CXX_STANDARD 11)
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
+find_package(pnicore REQUIRED)
+
 add_executable(example example.cpp)
-target_link_libraries(example ${CONAN_LIBS})
+target_link_libraries(example pnicore_shared)
 
 # CTest is a testing tool that can be used to test your project.
 # enable_testing()
