--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services:
 before_script:
     - docker run --name build -i -d -v"$PWD:/src" eugenwintersberger/debian_9:latest
     - docker exec -it build ls
-    - docker exec -it build bash -c "pip install conan"
+    - docker exec -it build bash -c "pip install conan --upgrade"
     - docker exec -it build bash -c "conan user"
     
 script:
